<resources>
    <string name="app_name">Ohms Law Calculator</string>
    <string name="main_volt_message">V = Voltage Equations</string>
    <string name="voltage_label">V</string>
    <string name="title_activity_volts_equation_list">Voltage Equations</string>
    <string name="instructions_label">Select a letter from the Ohms Law Triangle:</string>
    <string name="ohm_triangle_horizontal">ohm_triangle</string>
    <string name="resistance_label">R</string>
    <string name="current_label">I</string>
    <string name="main_resistance_message">R = Ohms Equations</string>
    <string name="main_current_message">I = Current Equations</string>
    <string name="volt_equations_title">Select an Equation:</string>
    <string name="title_activity_solve_equation">Solve Equation</string>
    <string name="solve_equation">Enter Values to Solve Equation:</string>
    <string name="title_activity_saved_equations">SavedEquations</string>
    <string name="title_activity_solved_equations">SolvedEquations</string>
    <string name="solved_equations_label">Solved Equations:</string>
    <string name="view_saved_equation_button">View Saved Equations</string>
    <string name="save_equation_button">Save Equation</string>
    <string name="delete_equation">Delete Equation</string>
    <string name="menu_about">About</string>
    <string name="title_activity_about">About Activity</string>
    <string name="about">This version of the Ohms Law Calculator allows for the use of the formulas for the ohms law triangle and power formulas. A Later version will include the ohms law wheel with more formulas</string>

    <!-- String arrays for spinner valuse -->

    <string-array name="volt_value_array">
        <item>Select</item>
        <item>V</item>
        <item>mV</item>
        <item>μV</item>
    </string-array>

    <string-array name="ohm_value_array">
        <item>Select</item>
        <item>Ω</item>
        <item>mΩ</item>
        <item>μΩ</item>
    </string-array>

    <string-array name="current_value_array">
        <item>Select</item>
        <item>A</item>
        <item>mA</item>
        <item>μA</item>
    </string-array>

    <string-array name="power_value_array">
        <item>Select</item>
        <item>W</item>
        <item>mW</item>
        <item>μW</item>
    </string-array>

</resources>
