<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".OhmsMain"
    android:background="@color/navy"
    android:orientation="vertical">

    <TextView
        style="@style/mainDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_label"
        android:id="@+id/instructionsLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <!--Line Separator -->

    <View
        android:id="@+id/separatorLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/OldLace"
        android:padding="5dp"
        android:layout_below="@+id/instructionsLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <TextView
        style="@style/mainDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_volt_message"
        android:id="@+id/voltMessage"
        android:layout_below="@+id/separatorLine"
        android:layout_marginTop="10dp" />

    <TextView
        style="@style/mainDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_resistance_message"
        android:id="@+id/resistanceMessage"
        android:layout_below="@id/voltMessage"
        android:layout_marginTop="10dp"/>

    <TextView
        style="@style/mainDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_current_message"
        android:id="@+id/currentMessage"
        android:layout_below="@id/resistanceMessage"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/ohmTriangleImage"
        android:src="@drawable/ohm_triangle_image"
        android:contentDescription="@string/ohm_triangle_horizontal"
        android:layout_gravity="end|center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/voltMessage"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/mainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/voltageLabel"
        android:text="@string/voltage_label"
        android:layout_alignStart="@+id/ohmTriangleImage"
        android:layout_alignTop="@+id/ohmTriangleImage"
        android:layout_alignEnd="@+id/ohmTriangleImage"
        android:gravity="center"
        android:layout_marginTop="55dp" />

    <TextView
        style="@style/mainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resistanceLabel"
        android:text="@string/resistance_label"
        android:layout_alignStart="@+id/ohmTriangleImage"
        android:layout_alignTop="@+id/ohmTriangleImage"
        android:layout_alignEnd="@+id/ohmTriangleImage"
        android:gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="195dp"
        android:layout_marginTop="155dp" />

    <TextView
        style="@style/mainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentLabel"
        android:text="@string/current_label"
        android:layout_alignStart="@+id/ohmTriangleImage"
        android:layout_alignTop="@+id/ohmTriangleImage"
        android:layout_alignEnd="@+id/ohmTriangleImage"
        android:gravity="center"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="155dp" />

</RelativeLayout>
